--- a/retrobisztro.html
+++ b/retrobisztro.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="retrobisztro.css" class="css">
 </head>
 <body>
-    <p>a</p>
+    <div class="box_shadow">
+        Jó napot vendégek!
+        Én is társaim itt vannak a szolgálasodra, mit keres ön?
+    </div>
 </body>
 </html>
