--- a/retrobisztro.html
+++ b/retrobisztro.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="box_shadow">
-        Jó napot vendégek!
-        Én is társaim itt vannak a szolgálasodra, mit keres ön?
+       <p> Jó napot vendégek!<br>
+        Én is társaim itt vannak a szolgálasodra, mit keres ön?</p>
     </div>
 </body>
 </html>
